Move auth div to base template

--- a/budgeter/templates/base.html
+++ b/budgeter/templates/base.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+  <div id="auth">
+    <a href="accounts/signup/">Sign Up</a>
+    <a>Log In</a>
+  </div>
   {% block main %}
   {% endblock %}
 </body>
