--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -4,6 +4,26 @@
 
 {% block main %}
 <h1>Create an account.</h1>
-<form>
+<form method="POST">
+  <div>
+    <label for="id_firstname">First Name</label>
+    <input type="text" id="id_firstname">
+  </div>
+  <div>
+    <label for="id_lastname">Last Name</label>
+    <input type="text" id="id_lastname">
+  </div>
+  <div>
+    <label for="id_email">Email</label>
+    <input type="text" id="id_email">
+  </div>
+  <div>
+    <label for="id_password">Password</label>
+    <input type="password" id="id_password">
+  </div>
+  {% csrf_token %}
+  <div>
+    <input type="submit">
+  </div>
 </form>
 {% endblock %}
