--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -7,19 +7,19 @@
 <form method="POST">
   <div>
     <label for="id_firstname">First Name</label>
-    <input type="text" id="id_firstname">
+    <input type="text" name="firstname" id="id_firstname">
   </div>
   <div>
     <label for="id_lastname">Last Name</label>
-    <input type="text" id="id_lastname">
+    <input type="text" name="lastname" id="id_lastname">
   </div>
   <div>
     <label for="id_email">Email</label>
-    <input type="text" id="id_email">
+    <input type="text" name="email" id="id_email">
   </div>
   <div>
     <label for="id_password">Password</label>
-    <input type="password" id="id_password">
+    <input type="password" name="password" id="id_password">
   </div>
   {% csrf_token %}
   <div>
