Make login link

--- a/budgeter/templates/base.html
+++ b/budgeter/templates/base.html
@@ -10,7 +10,7 @@
 <body>
   <div id="auth">
     <a href="accounts/signup/">Sign Up</a>
-    <a>Log In</a>
+    <a href="accounts/login/">Log In</a>
   </div>
   {% block main %}
   {% endblock %}
