--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Your Account{% endblock %}
+{% block title %}Log In{% endblock %}
 
 {% block main %}
 <h1>Log in to your account</h1>
