Rename accounts app to users

--- a/budgeter/templates/base.html
+++ b/budgeter/templates/base.html
@@ -9,8 +9,8 @@
 
 <body>
   <div id="auth">
-    <a href="accounts/signup/">Sign Up</a>
-    <a href="accounts/login/">Log In</a>
+    <a href="/users/signup/">Sign Up</a>
+    <a href="/users/login/">Log In</a>
   </div>
   {% block main %}
   {% endblock %}
