--- a/budgeter/templates/base.html
+++ b/budgeter/templates/base.html
@@ -9,8 +9,12 @@
 
 <body>
   <div id="auth">
+    {% if user.is_authenticated %}
+    <a>Log Out</a>
+    {% else %}
     <a href="/users/signup/">Sign Up</a>
     <a href="/users/login/">Log In</a>
+    {% endif %}
   </div>
   {% block main %}
   {% endblock %}
