Add link to account on all pages

--- a/budgeter/templates/base.html
+++ b/budgeter/templates/base.html
@@ -16,6 +16,9 @@
     <a href="/users/login/">Log In</a>
     {% endif %}
   </div>
+  <div id="account">
+    <a href="/users/me/">Your Account</a>
+  </div>
   {% block main %}
   {% endblock %}
 </body>
