--- a/budgeter/templates/base.html
+++ b/budgeter/templates/base.html
@@ -10,7 +10,7 @@
 <body>
   <div id="auth">
     {% if user.is_authenticated %}
-    <a>Log Out</a>
+    <a href="/users/logout/">Log Out</a>
     {% else %}
     <a href="/users/signup/">Sign Up</a>
     <a href="/users/login/">Log In</a>
