--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -16,6 +16,9 @@
   <div>
     <label for="id_email">Email</label>
     <input type="text" name="email" id="id_email">
+    {% if email_error %}
+    <div id="email_error">{{ email_error}}</div>
+    {% endif %}
   </div>
   <div>
     <label for="id_password">Password</label>
