--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -8,6 +8,9 @@
   <div>
     <label for="id_firstname">First Name</label>
     <input type="text" name="firstname" id="id_firstname">
+    {% if firstname_error %}
+    <div id="firstname_error">{{ firstname_error }}</div>
+    {% endif %}
   </div>
   <div>
     <label for="id_lastname">Last Name</label>
@@ -17,7 +20,7 @@
     <label for="id_email">Email</label>
     <input type="text" name="email" id="id_email">
     {% if email_error %}
-    <div id="email_error">{{ email_error}}</div>
+    <div id="email_error">{{ email_error }}</div>
     {% endif %}
   </div>
   <div>
