--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -15,6 +15,9 @@
   <div>
     <label for="id_lastname">Last Name</label>
     <input type="text" name="lastname" id="id_lastname">
+    {% if lastname_error %}
+    <div id="lastname_error">{{ lastname_error }}</div>
+    {% endif %}
   </div>
   <div>
     <label for="id_email">Email</label>
