--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -7,21 +7,21 @@
 <form method="POST">
   <div>
     <label for="id_firstname">First Name</label>
-    <input type="text" name="firstname" id="id_firstname">
+    <input type="text" name="firstname" id="id_firstname"{% if firstname %} value="{{ firstname }}" {% endif %}>
     {% if firstname_error %}
     <div id="firstname_error">{{ firstname_error }}</div>
     {% endif %}
   </div>
   <div>
     <label for="id_lastname">Last Name</label>
-    <input type="text" name="lastname" id="id_lastname">
+    <input type="text" name="lastname" id="id_lastname"{% if lastname %} value="{{ lastname }}" {% endif %}>
     {% if lastname_error %}
     <div id="lastname_error">{{ lastname_error }}</div>
     {% endif %}
   </div>
   <div>
     <label for="id_email">Email</label>
-    <input type="text" name="email" id="id_email">
+    <input type="text" name="email" id="id_email"{% if email %} value="{{ email }}" {% endif %}>
     {% if email_error %}
     <div id="email_error">{{ email_error }}</div>
     {% endif %}
