--- a/budgeter/templates/base.html
+++ b/budgeter/templates/base.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="author" content="Sam Ireland">
   <title>{% block title %}{% endblock %}</title>
+  <link rel="stylesheet" type="text/css" href="/static/css/main.css">
 </head>
 
 <body>
