--- a/budgeter/static/css/main.css
+++ b/budgeter/static/css/main.css
@@ -1,3 +1,21 @@
-h1 {
-  font-size: 400%;
+
+
+@media only screen and (min-width: 568px) {
+  /* iPad down */
+
+
+}
+
+
+@media only screen and (min-width: 769px) {
+  /* Small Desktop screens */
+
+
+}
+
+
+@media only screen and (min-width: 1024px) {
+  /* Big Desktop screens */
+
+
 }
