--- a/budgeter/templates/base.html
+++ b/budgeter/templates/base.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="author" content="Sam Ireland">
   <title>{% block title %}{% endblock %}</title>
+  <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'
+   type='text/css'>
   <link rel="stylesheet" type="text/css" href="/static/css/main.css">
 </head>
 
