--- a/budgeter/templates/base.html
+++ b/budgeter/templates/base.html
@@ -13,6 +13,9 @@
 <body>
 
 <header>
+  <div id="home">
+    <a href="/">Budgeter</a>
+  </div>
   <div id="auth">
     {% if user.is_authenticated %}
     <a href="/users/logout/">Log Out</a>
@@ -20,12 +23,13 @@
     <a href="/users/signup/">Sign Up</a>
     <a href="/users/login/">Log In</a>
     {% endif %}
+    {% if user.is_authenticated %}
+    <div id="account">
+      <a href="/users/me/">Your Account</a>
+    </div>
+    {% endif %}
   </div>
-  {% if user.is_authenticated %}
-  <div id="account">
-    <a href="/users/me/">Your Account</a>
-  </div>
-  {% endif %}
+
 </header>
 
 <main>
