--- a/users/templates/account.html
+++ b/users/templates/account.html
@@ -6,4 +6,8 @@
 <h1>Account</h1>
 
 <h2>{{ user.first_name }} {{ user.last_name }}</h2>
+
+<div id="delete_section">
+  <a href="/users/delete/">Delete Account</a>
+</div>
 {% endblock %}
